// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> shapshots should render with the a height determined by its factor 1`] = `
<div
  className="card undefined"
  onClick={undefined}
  style={
    Object {
      "height": 125,
    }
  }
>
  <div
    alwaysShow={true}
    className="imageContainer"
    showSpinner={true}
    src={undefined}
  />
  <div
    className="gradient"
  >
    <div
      className="titleText"
    >
      <span>
         
        myTitle
      </span>
    </div>
  </div>
</div>
`;

exports[`<Card /> shapshots should render with the given className 1`] = `
<div
  className="card myClass"
  onClick={undefined}
  style={
    Object {
      "height": 375,
    }
  }
>
  <div
    alwaysShow={true}
    className="imageContainer"
    showSpinner={true}
    src={undefined}
  />
  <div
    className="gradient"
  >
    <div
      className="titleText"
    >
      <span>
         
        myTitle
      </span>
    </div>
  </div>
</div>
`;

exports[`<Card /> shapshots should render with the given icon shown 1`] = `
<div
  className="card undefined"
  onClick={undefined}
  style={
    Object {
      "height": 375,
    }
  }
>
  <div
    alwaysShow={true}
    className="imageContainer"
    showSpinner={true}
    src={undefined}
  />
  <div
    className="gradient"
  >
    <div
      className="titleText"
    >
      <span>
        <i
          className="mdi mdi-monitor"
        />
         
        myTitle
      </span>
    </div>
  </div>
</div>
`;

exports[`<Card /> shapshots should render with the given image 1`] = `
<div
  className="card undefined"
  onClick={undefined}
  style={
    Object {
      "height": 375,
    }
  }
>
  <div
    alwaysShow={true}
    className="imageContainer"
    showSpinner={true}
    src="myImage"
  />
  <div
    className="gradient"
  >
    <div
      className="titleText"
    >
      <span>
         
        myTitle
      </span>
    </div>
  </div>
</div>
`;

exports[`<Card /> shapshots should render with the given minor text 1`] = `
<div
  className="card undefined"
  onClick={undefined}
  style={
    Object {
      "height": 375,
    }
  }
>
  <div
    alwaysShow={true}
    className="imageContainer"
    showSpinner={true}
    src={undefined}
  />
  <div
    className="gradient"
  >
    <div
      className="titleText"
    >
      <span>
         
        myTitle
      </span>
    </div>
  </div>
</div>
`;

exports[`<Card /> shapshots should render with the given style 1`] = `
<div
  className="card undefined"
  onClick={undefined}
  style={
    Object {
      "bottom": 0,
      "height": 375,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
>
  <div
    alwaysShow={true}
    className="imageContainer"
    showSpinner={true}
    src={undefined}
  />
  <div
    className="gradient"
  >
    <div
      className="titleText"
    >
      <span>
         
        myTitle
      </span>
    </div>
  </div>
</div>
`;

exports[`<Card /> shapshots should render with the given title 1`] = `
<div
  className="card undefined"
  onClick={undefined}
  style={
    Object {
      "height": 375,
    }
  }
>
  <div
    alwaysShow={true}
    className="imageContainer"
    showSpinner={true}
    src={undefined}
  />
  <div
    className="gradient"
  >
    <div
      className="titleText"
    >
      <span>
         
        myTitle
      </span>
    </div>
  </div>
</div>
`;
